--- a/alpacha.ipynb
+++ b/alpacha.ipynb
@@ -2,10 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0d950e14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'account_blocked': False,\n",
+      " 'account_number': 'PA39ZRSM24ZM',\n",
+      " 'accrued_fees': '0',\n",
+      " 'admin_configurations': {},\n",
+      " 'balance_asof': '2025-10-17',\n",
+      " 'bod_dtbp': '0',\n",
+      " 'buying_power': '192628.28',\n",
+      " 'cash': '95053.52',\n",
+      " 'created_at': '2022-06-29T22:47:58.783467Z',\n",
+      " 'crypto_status': 'ACTIVE',\n",
+      " 'crypto_tier': 1,\n",
+      " 'currency': 'USD',\n",
+      " 'daytrade_count': 0,\n",
+      " 'daytrading_buying_power': '0',\n",
+      " 'effective_buying_power': '192628.28',\n",
+      " 'equity': '100099.32',\n",
+      " 'id': 'a4824b34-307c-45a7-a832-35deb099df29',\n",
+      " 'initial_margin': '3785.18',\n",
+      " 'intraday_adjustments': '0',\n",
+      " 'last_equity': '100099.32',\n",
+      " 'last_maintenance_margin': '1513.74',\n",
+      " 'long_market_value': '5045.8',\n",
+      " 'maintenance_margin': '1513.74',\n",
+      " 'multiplier': '2',\n",
+      " 'non_marginable_buying_power': '94314.14',\n",
+      " 'options_approved_level': 3,\n",
+      " 'options_buying_power': '96314.14',\n",
+      " 'options_trading_level': 3,\n",
+      " 'pattern_day_trader': True,\n",
+      " 'pending_reg_taf_fees': '0',\n",
+      " 'portfolio_value': '100099.32',\n",
+      " 'position_market_value': '5045.8',\n",
+      " 'regt_buying_power': '192628.28',\n",
+      " 'short_market_value': '0',\n",
+      " 'shorting_enabled': True,\n",
+      " 'sma': '98776.11',\n",
+      " 'status': 'ACTIVE',\n",
+      " 'trade_suspended_by_user': False,\n",
+      " 'trading_blocked': False,\n",
+      " 'transfers_blocked': False,\n",
+      " 'user_configurations': None}\n",
+      "{'account_blocked': False,\n",
+      " 'account_number': 'PA39ZRSM24ZM',\n",
+      " 'accrued_fees': '0',\n",
+      " 'admin_configurations': {},\n",
+      " 'balance_asof': '2025-10-17',\n",
+      " 'bod_dtbp': '0',\n",
+      " 'buying_power': '192628.28',\n",
+      " 'cash': '95053.52',\n",
+      " 'created_at': '2022-06-29T22:47:58.783467Z',\n",
+      " 'crypto_status': 'ACTIVE',\n",
+      " 'crypto_tier': 1,\n",
+      " 'currency': 'USD',\n",
+      " 'daytrade_count': 0,\n",
+      " 'daytrading_buying_power': '0',\n",
+      " 'effective_buying_power': '192628.28',\n",
+      " 'equity': '100099.32',\n",
+      " 'id': 'a4824b34-307c-45a7-a832-35deb099df29',\n",
+      " 'initial_margin': '3785.18',\n",
+      " 'intraday_adjustments': '0',\n",
+      " 'last_equity': '100099.32',\n",
+      " 'last_maintenance_margin': '1513.74',\n",
+      " 'long_market_value': '5045.8',\n",
+      " 'maintenance_margin': '1513.74',\n",
+      " 'multiplier': '2',\n",
+      " 'non_marginable_buying_power': '94314.14',\n",
+      " 'options_approved_level': 3,\n",
+      " 'options_buying_power': '96314.14',\n",
+      " 'options_trading_level': 3,\n",
+      " 'pattern_day_trader': True,\n",
+      " 'pending_reg_taf_fees': '0',\n",
+      " 'portfolio_value': '100099.32',\n",
+      " 'position_market_value': '5045.8',\n",
+      " 'regt_buying_power': '192628.28',\n",
+      " 'short_market_value': '0',\n",
+      " 'shorting_enabled': True,\n",
+      " 'sma': '98776.11',\n",
+      " 'status': 'ACTIVE',\n",
+      " 'trade_suspended_by_user': False,\n",
+      " 'trading_blocked': False,\n",
+      " 'transfers_blocked': False,\n",
+      " 'user_configurations': None}\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pprint\n",
@@ -45,41 +134,16 @@
     "        response.raise_for_status()\n",
     "        return response.json()\n",
     "    \n",
+    "\n",
     "# Example usage:\n",
-    "api = AlphcaAPI(api_key=\"PKVYGF4K9O1DXVRUPN7R\", api_secret=\"qozyVh0vFisDDUqNiZSih8GJfuIBzChas9isJ9XM\")\n",
+    "api = AlphcaAPI(api_key=\"PK3WDIKCFF4ZPKWMG5QK25QSOS\", api_secret=\"6oessnea2UcEfgLjA49zD5Mm6mCNtgEUG2DguhWHjn2p\")\n",
     "account_info = api.get_account_info()\n",
     "\n",
-    "pprint.pprint(account_info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cc4cac0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "market_data = api.get_market_data(\"AAPL\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db53ed25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api.place_order(\"AAPL\", 10, \"buy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dc7d9f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pprint.pprint(account_info)"
+    "pprint.pprint(account_info)\n",
+    "market_data = api.get_market_data(\"AAPL\")\n",
+    "api.place_order(\"AAPL\", 10, \"buy\")\n",
+    "pprint.pprint(account_info)\n",
+    "\n"
    ]
   },
   {
